# latexila

./: .gitignore  AUTHORS  CMakeLists.txt  HACKING  INSTALL  README  TODO
data/: CMakeLists.txt  cmake-compile-schemas  gschemas.compiled  org.gnome.latexila.gschema.xml  org.gnome.latexila.gschema.xml.in
data/images/app/: CMakeLists.txt
data/images/arrows/: CMakeLists.txt
data/images/delimiters/: CMakeLists.txt
data/images/greek/: CMakeLists.txt
data/images/icons/: CMakeLists.txt
data/images/misc-math/: CMakeLists.txt
data/images/misc-text/: CMakeLists.txt
data/images/operators/: CMakeLists.txt
data/images/relations/: CMakeLists.txt
data/images/templates/: CMakeLists.txt
data/templates/: CMakeLists.txt  article-fr.tex  beamer-fr.tex  book-fr.tex  letter-en.tex  letter-fr.tex  report-fr.tex
po/: es.po  fr.po  latexila.pot
src/: CMakeLists.txt  app_settings.vala  application.vala  config.h.in  custom_statusbar.vala  dialogs.vala  document.vala  document_tab.vala  document_view.vala  documents_panel.vala  gedit-utils.c  gedit-utils.h  log_zone.vala  main.vala  main_window.vala  menu_in_toolbar.vala  menu_tool_action.c  menu_tool_action.h  preferences_dialog.ui  preferences_dialog.vala  search.vala  search_and_replace.ui  symbols.vala  tab_info_bar.vala  templates.vala  ui.xml  utils.vala
vapi/: config.vapi  gedit.vapi  menu_tool_action.vapi
