INSTALL(FILES logo.png DESTINATION ${DATA_DIR}/images/app)
INSTALL(FILES icon16.png DESTINATION ${ICONS_DIR}/16x16 RENAME latexila.png)
INSTALL(FILES icon22.png DESTINATION ${ICONS_DIR}/22x22 RENAME latexila.png)
INSTALL(FILES icon24.png DESTINATION ${ICONS_DIR}/24x24 RENAME latexila.png)
INSTALL(FILES icon32.png DESTINATION ${ICONS_DIR}/32x32 RENAME latexila.png)
INSTALL(FILES icon48.png DESTINATION ${ICONS_DIR}/48x48 RENAME latexila.png)
